--- a/html/layout/loader.html
+++ b/html/layout/loader.html
@@ -27,6 +27,9 @@
 	<!-- jquery-ui -->
 	<link rel="stylesheet" type="text/css" href="../../resources/plugins/jquery-ui/jquery-ui.css">
 	<script src="../../resources/plugins/jquery-ui/jquery-ui.min.js"></script>
+	<!-- apexcharts -->
+	<link rel="stylesheet" type="text/css" href="../../resources/plugins/apexcharts/3.50.0/apexcharts.css">
+	<script src="../../resources/plugins/apexcharts/3.50.0/apexcharts.min.js"></script>
 	<!-- //[plugins] -->
 
 	<!-- ui source -->
