--- a/html/components/component_modal.html
+++ b/html/components/component_modal.html
@@ -9,9 +9,6 @@
 	<script src="../../resources/plugins/jquery/jquery.min.js"></script>
 
 	<!-- [plugins] -->
-	<!-- dropzone -->
-	<link rel="stylesheet" href="../../resources/plugins/dropzone/5.9.3/dropzone.min.css">
-	<script src="../../resources/plugins/dropzone/5.9.3/dropzone.min.js"></script>
 	<!-- highlight -->
 	<link rel="stylesheet" href="../../resources/plugins/highlight.js/11.9.0/styles/vs2015.min.css">
 	<script src="../../resources/plugins/highlight.js/11.9.0/highlight.min.js"></script>
@@ -47,6 +44,9 @@
 	<script src="../../resources/plugins/jquery-ui/jquery-ui.min.js"></script>
 	<!-- pinch-zoom -->
 	<script src="../../resources/plugins/pinch-zoom/pinch-zoom.umd.js"></script>
+	<!-- apexcharts -->
+	<link rel="stylesheet" type="text/css" href="../../resources/plugins/apexcharts/3.50.0/apexcharts.css">
+	<script src="../../resources/plugins/apexcharts/3.50.0/apexcharts.min.js"></script>
 	<!-- //[plugins] -->
 
 	<link rel="stylesheet" href="../../resources/css/ui-fonts.css">
@@ -162,7 +162,7 @@
 								<li><button type="button"><span>내가 등록한 명함 내가 등록한 명함 내가 등록한 명함 내가 등록한 명함</span><i class="badge">5</i></button></li>
 								<li class="select-active"><button type="button" aria-label="선택됨"><span>PB 1팀</span><i class="badge">3</i></button></li>
 							</ul>
-							<div class="stroke4"></div>
+							<div class="stroke stroke4"></div>
 							<strong class="title-large">정렬</strong>
 							<ul>
 								<li class="select-active"><button type="button" aria-label="선택됨"><span>최신순</span></button></li>
