--- a/html/components/component_group.html
+++ b/html/components/component_group.html
@@ -121,9 +121,19 @@
 						<strong class="title-medium">직급</strong>
 					</div>
 					<div class="group-content">
-						<div class="inp inp-tab">
-							<input type="radio" name="inp-tab01" aria-label="과장" checked>
-							<input type="radio" name="inp-tab01" aria-label="팀장">
+						<div class="inp-group">
+							<div class="inp inp-medium">
+								<label>
+									<input type="radio" name="rad002">
+									<span class="label-title">과장</span>
+								</label>
+							</div>
+							<div class="inp inp-medium">
+								<label>
+									<input type="radio" name="rad002">
+									<span class="label-title">팀장</span>
+								</label>
+							</div>
 						</div>
 					</div>
 				</div>
