--- a/html/components/component_input_radio.html
+++ b/html/components/component_input_radio.html
@@ -71,7 +71,7 @@
 
 		<div class="ui-guide-section">
 			<div class="ui-guide-box">
-				<h2>Default</h2>
+				<h2>Large</h2>
 				<dl>
 					<dt></dt>
 					<dd>
@@ -92,16 +92,51 @@
 			</div>
 			<hr>
 			<div class="ui-guide-box">
-				<h2>Tab</h2>
+				<h2>Medium</h2>
 				<dl>
-					<dt>Two Tabs</dt>
+					<dt></dt>
 					<dd>
-						<div class="inp inp-tab">
-							<input type="radio" name="rad002" aria-label="텍스트">
-							<input type="radio" name="rad002" aria-label="텍스트">
+						<div class="inp inp-medium">
+							<label>
+								<input type="radio" name="rad002">
+								<span class="label-title">텍스트를 입력해주세요</span>
+							</label>
+						</div>
+						<div class="inp inp-medium">
+							<label>
+								<input type="radio" name="rad002">
+								<span class="label-title">텍스트를 입력해주세요</span>
+							</label>
 						</div>
 					</dd>
 				</dl>
+			</div>
+			<hr>
+			<div class="ui-guide-box">
+				<h2>Group</h2>
+				<dl>
+					<dt></dt>
+					<dd>
+						<div class="inp-group">
+							<div class="inp inp-medium">
+								<label>
+									<input type="radio" name="rad002">
+									<span class="label-title">과장</span>
+								</label>
+							</div>
+							<div class="inp inp-medium">
+								<label>
+									<input type="radio" name="rad002">
+									<span class="label-title">팀장</span>
+								</label>
+							</div>
+						</div>
+					</dd>
+				</dl>
+			</div>
+			<hr>
+			<div class="ui-guide-box">
+				<h2>inp-tab</h2>
 				<dl>
 					<dt>Three Tabs</dt>
 					<dd>
