--- a/html/components/component_tab.html
+++ b/html/components/component_tab.html
@@ -61,6 +61,8 @@
 
 	<script src="../../resources/js/ui-script.js"></script>
 	<script src="../../resources/js/ui-temp.js"></script> <!-- 개발서버에서 include 제외해주세요 -->
+	<style>
+	</style>
 	<!-- //ui source -->
 </head>
 
@@ -165,6 +167,60 @@
 			<!-- tab-content -->
 			<div class="tab-content">
 				<ul class="tab-list tab-anchor overflow-list" role="tablist">
+					<li class="tab tab-active"><a role="tab" href="#">tab-sub01</a></li>
+					<li class="tab"><a role="tab" href="#">tab-sub02</a></li>
+					<li class="tab"><a role="tab" href="#">tab-sub03</a></li>
+					<li class="tab"><a role="tab" href="#">tab-sub03</a></li>
+				</ul>
+			</div>
+			<!-- //tab-content -->
+
+		</div>
+
+
+		<div class="ui-guide-section">
+			<h2>Tab <span>Button</span></h2>
+
+			<h3>Type Button</h3>
+			<!-- tab-content -->
+			<div class="tab-content">
+				<ul class="tab-list tab-button overflow-list" role="tablist">
+					<li class="tab tab-active"><button type="button" data-controls="tab-subpanel04" role="tab">tab-sub01</button></li>
+					<li class="tab"><button type="button" data-controls="tab-subpanel05" role="tab">tab-sub02</button></li>
+					<li class="tab"><button type="button" data-controls="tab-subpanel06" role="tab">tab-sub03</button></li>
+				</ul>
+				<div id="tab-subpanel04" class="tabpanel">
+					<h3 class="blind">tab-sub01</h3>
+					<div>tab-sub01</div>
+				</div>
+				<div id="tab-subpanel05" class="tabpanel">
+					<h3 class="blind">tab-sub02</h3>
+					<div>tab-sub02</div>
+				</div>
+				<div id="tab-subpanel06" class="tabpanel">
+					<h3 class="blind">tab-sub03</h3>
+					<div>tab-sub03</div>
+				</div>
+			</div>
+			<!-- //tab-content -->
+
+			<hr>
+			<h3>Type Anchor</h3>
+			<!-- tab-content -->
+			<div class="tab-content">
+				<ul class="tab-list tab-button overflow-list" role="tablist">
+					<li class="tab tab-active"><a role="tab" href="#">tab-sub01</a></li>
+					<li class="tab"><a role="tab" href="#">tab-sub02</a></li>
+					<li class="tab"><a role="tab" href="#">tab-sub03</a></li>
+				</ul>
+			</div>
+			<!-- //tab-content -->
+
+			<hr>
+			<h3>Type scrollable</h3>
+			<!-- tab-content -->
+			<div class="tab-content">
+				<ul class="tab-list tab-button overflow-list" role="tablist">
 					<li class="tab tab-active"><a role="tab" href="#">tab-sub01</a></li>
 					<li class="tab"><a role="tab" href="#">tab-sub02</a></li>
 					<li class="tab"><a role="tab" href="#">tab-sub03</a></li>
