--- a/resources/css/ui-style.css
+++ b/resources/css/ui-style.css
@@ -1,5 +1,18 @@
 @charset "utf-8";
 
+/* typography */
+.headline-large {display:block;font-size:26px;line-height:1.4;font-weight:700;color:var(--typography-title);}
+.headline-medium {display:block;font-size:24px;line-height:1.4;font-weight:700;color:var(--typography-title);}
+.headline-small {display:block;font-size:22px;line-height:1.4;font-weight:700;color:var(--typography-title);}
+.title-large {display:block;font-size:20px;line-height:1.5;font-weight:700;color:var(--typography-title);}
+.title-medium {display:block;font-size:18px;line-height:1.5;font-weight:700;color:var(--typography-title);}
+.title-small {display:block;font-size:16px;line-height:1.5;font-weight:700;color:var(--typography-title);}
+.body-xlarge {display:block;font-size:20px;line-height:1.6;font-weight:500;color:var(--typography-body);}
+.body-large {display:block;font-size:18px;line-height:1.6;font-weight:500;color:var(--typography-body);}
+.body-medium {display:block;font-size:16px;line-height:1.6;font-weight:500;color:var(--typography-body);}
+.body-small {display:block;font-size:15px;line-height:1.6;font-weight:500;color:var(--typography-body);}
+
+
 /* button */
 .btn-large {display:inline-flex;align-items:center;justify-content:center;height:52px;font-size:20px;border-width:1px;border-radius:8px;padding:16px;white-space:nowrap;text-align:center;vertical-align:top;gap:4px;line-height:18px;}
 .btn-medium {display:inline-flex;align-items:center;justify-content:center;height:48px;font-size:18px;border-width:1px;border-radius:8px;padding:14px 16px;white-space:nowrap;text-align:center;vertical-align:top;gap:4px;line-height:18px;}
@@ -54,6 +67,7 @@ div.btn-xsmall .btn-inner {display:flex;padding:6px 0 6px 12px;}
 
 .anchor {display:inline-flex;color:var(--button-textBtn-Enabled);line-height:1;font-weight:400;}
 .anchor.chevron {align-items:center;gap:8px;white-space:nowrap;}
+.anchor-fluid {display:flex;justify-content:space-between;padding:24px 16px;}
 .anchor.fs-15 {padding:4px;}
 .anchor.fs-16 {padding:6px;}
 
@@ -68,6 +82,7 @@ div.btn-xsmall .btn-inner {display:flex;padding:6px 0 6px 12px;}
     mask-image:url(../images/arrow/ico_chevron.svg);
     background-color:var(--icon-gray_2);
 }
+.anchor.chevron.anchor-fluid:after {flex:0 0 10px;width:10px;height:20px;}
 .anchor.chevron-up {gap:2px}
 .anchor.chevron-up:after {
     -webkit-mask-image:url(../images/arrow/ico_chevron_up.svg);
@@ -126,6 +141,7 @@ i.ico-close-16 {-webkit-mask-image:url(../images/ico/ico_close_16.svg);mask-imag
 i.ico-keyword {-webkit-mask-image:url(../images/ico/ico-keyword.svg);mask-image:url(../images/ico/ico-keyword.svg);}
 i.ico-chevron {-webkit-mask-image:url(../images/arrow/ico_chevron.svg);mask-image:url(../images/arrow/ico_chevron.svg);flex:0 0 7px;width:7px;height:14px;background-color:var(--icon-gray_2);}
 i.ico-compare {-webkit-mask-image:url(../images/ico/ico_compare.svg);mask-image:url(../images/ico/ico_compare.svg);}
+i.ico-grid {-webkit-mask-image:url(../images/ico/ico_grid.svg);mask-image:url(../images/ico/ico_grid.svg);}
 
 
 /* fab */
@@ -136,17 +152,6 @@ i.ico-compare {-webkit-mask-image:url(../images/ico/ico_compare.svg);mask-image:
 .fab.view-more:before {content:'';flex:0 0 24px;height:24px;background:url(../images/btn/ico_plus.svg) center center / contain no-repeat;}
 .fab.scroll-to-top:before {content:'';flex:0 0 24px;height:24px;background:url(../images/btn/ico_gototop.svg) center center / contain no-repeat;}
 
-/* typography */
-.headline-large {display:block;font-size:26px;line-height:1.4;font-weight:700;color:var(--typography-title);}
-.headline-medium {display:block;font-size:24px;line-height:1.4;font-weight:700;color:var(--typography-title);}
-.headline-small {display:block;font-size:22px;line-height:1.4;font-weight:700;color:var(--typography-title);}
-.title-large {display:block;font-size:20px;line-height:1.5;font-weight:700;color:var(--typography-title);}
-.title-medium {display:block;font-size:18px;line-height:1.5;font-weight:700;color:var(--typography-title);}
-.title-small {display:block;font-size:16px;line-height:1.5;font-weight:700;color:var(--typography-title);}
-.body-xlarge {display:block;font-size:20px;line-height:1.6;font-weight:500;color:var(--typography-body);}
-.body-large {display:block;font-size:18px;line-height:1.6;font-weight:500;color:var(--typography-body);}
-.body-medium {display:block;font-size:16px;line-height:1.6;font-weight:500;color:var(--typography-body);}
-.body-small {display:block;font-size:15px;line-height:1.6;font-weight:500;color:var(--typography-body);}
 
 [class^="headline"].inner-ico {display:flex;gap:6px;align-items:center;}
 [class^="headline"].inner-ico i {flex:0 0 24px;width:24px;height:24px;}
@@ -222,11 +227,10 @@ select[disabled] {background-color:var(--graye6);color:var(--graya7);}
 
 .inp-medium {display:flex;justify-content:space-between;gap:8px;padding-left:32px;}
 .inp-medium label {}
-.inp-medium input[type="checkbox"] {position:absolute;left:0;top:0px;display:flex;align-items:flex-end;justify-content:center;appearance:none;-webkit-appearance:none;border:0;cursor:inherit;flex:0 0 24px;width:24px;height:24px;background:url(../images/form/form-checkbox-medium.svg) center center / contain no-repeat;}
+.inp-medium input[type="checkbox"] {position:absolute;left:0;top: 2px;display:flex;align-items:flex-end;justify-content:center;appearance:none;-webkit-appearance:none;border:0;cursor:inherit;flex:0 0 24px;width:24px;height:24px;background:url(../images/form/form-checkbox-medium.svg) center center / contain no-repeat;}
 .inp-medium input[type="checkbox"]:checked {background:url(../images/form/form-checkbox-medium-checked.svg) center center / contain no-repeat;}
 .inp-medium .label-title {display:block;font-size:18px;line-height:1.5;color:var(--typography-gray);}
 .inp-medium .label-subtitle {display:block;font-size:15px;font-weight:400;color:var(--typography-body);margin-top:8px;}
-
 
 .inp-small {display:flex;justify-content:space-between;gap:8px;padding-left:32px;}
 .inp-small label {}
@@ -235,19 +239,18 @@ select[disabled] {background-color:var(--graye6);color:var(--graya7);}
 .inp-small .label-title {display:block;font-size:15px;font-weight:400;line-height:1.6;color:var(--typography-body);margin:2px 0 1px;}
 .inp-small .chevron-only {margin-top:2px;}
 
-.inp-large input[type="radio"] {position:absolute;left:0;top:0px;display:flex;align-items:flex-end;justify-content:center;appearance:none;-webkit-appearance:none;border:0;cursor:inherit;flex:0 0 24px;width:24px;height:24px;background:url(../images/form/form-radio-large.svg) center center / contain no-repeat;}
+.inp-large input[type="radio"] {position:absolute;left:0;top:2px;display:flex;align-items:flex-end;justify-content:center;appearance:none;-webkit-appearance:none;border:0;cursor:inherit;flex:0 0 24px;width:24px;height:24px;background:url(../images/form/form-radio-large.svg) center center / contain no-repeat;}
 .inp-large input[type="radio"]:checked {background:url(../images/form/form-radio-large-checked.svg) center center / contain no-repeat;}
+.inp-large input[type="radio"] ~ .label-title {font-weight:500;color:var(--typography-gray);}
+.inp-large input[type="radio"]:checked ~ .label-title {font-weight:700;color:var(--typography-title);}
 
-/* inp-tab */
-.inp-tab {display:flex;padding:2px;background-color:var(--surface-surface50);border-radius:8px;}
-.inp-tab label {position:relative;flex:1;display:flex;align-items:center;justify-content:center;}
-.inp-tab input[type="radio"] {position:relative;display:flex;align-items:center;justify-content:center;flex:1 1 100%;appearance:none;-webkit-appearance:none;border:0;text-align:center;padding:0 8px;font-size:16px;font-weight:400;color:var(--typography-gray);line-height:44px;height:44px;border-radius:8px;background-color:transparent;transition:background-color 0.15s ease;}
-.inp-tab input[type="radio"]:before {content:attr(aria-label);}
-.inp-tab input[type="radio"]:checked {background-color:var(--background-bg_white);color:var(--typography-black);font-weight:700;}
-.inp-tab input[type="radio"]:after {content:'';position:absolute;left:0;top:50%;width:1px;height:14px;background-color:var(--border-8);margin-top:-7px;}
-.inp-tab input[type="radio"]:checked + input[type="radio"]:after {display:none;}
-.inp-tab input[type="radio"]:checked:after {display:none;}
-.inp-tab input[type="radio"]:first-child:after {display:none;}
+.inp-medium input[type="radio"] {position:absolute;left:0;top: 3px;display:flex;align-items:flex-end;justify-content:center;appearance:none;-webkit-appearance:none;border:0;cursor:inherit;flex:0 0 20px;width:20px;height:20px;background:url(../images/form/form-radio-medium.svg) center center / contain no-repeat;}
+.inp-medium input[type="radio"]:checked {background:url(../images/form/form-radio-medium-checked.svg) center center / contain no-repeat;}
+.inp-medium input[type="radio"] ~ .label-title {font-weight:400;color:var(--typography-gray);margin-left:-4px;}
+.inp-medium input[type="radio"]:checked ~ .label-title {font-weight:500;color:var(--typography-title);}
+
+/* inp-group */
+.inp-group {display:flex;flex-wrap:wrap;gap:24px;padding: 16px 8px;}
 
 /* inpboard */
 .inp-board {display:grid;grid-template-columns:repeat(3, 1fr);gap:4px;}
@@ -333,6 +336,23 @@ select[disabled] {background-color:var(--graye6);color:var(--graya7);}
 .tab-content .tab-anchor li a {position:relative;display:flex;font-size:16px;font-weight:400;line-height:30px;align-items:center;justify-content:center;color:var(--typography-gray);background-color:var(--background-bg_disabled);padding:0 14px;white-space:nowrap;border-radius:30px;}
 .tab-content .tab-anchor li.tab-active button,
 .tab-content .tab-anchor li.tab-active a {color:var(--white-100);background-color:var(--button-primary-enabled);box-shadow:0px 0.5px 0px 0px var(--shadow-gray_3), 0px 3px 12px -1px var(--shadow-gray_3);}
+
+.tab-content .tab-button {display:flex;padding:2px;background-color:var(--surface-surface50);border-radius:8px;gap:0;}
+.tab-content .tab-button li {flex:1;}
+.tab-content .tab-button li button,
+.tab-content .tab-button li a {position:relative;display:flex;align-items:center;justify-content:center;flex:1 1 100%;width:100%;appearance:none;-webkit-appearance:none;border:0;text-align:center;padding:0 8px;font-size:16px;font-weight:400;color:var(--typography-gray);line-height:44px;height:44px;border-radius:8px;background-color:transparent;transition:background-color 0.15s ease;}
+.tab-content .tab-button li button:after,
+.tab-content .tab-button li a:after {content:'';position:absolute;left:0;top:50%;width:1px;height:14px;background-color:var(--border-8);margin-top:-7px;}
+.tab-content .tab-button li.tab-active button,
+.tab-content .tab-button li.tab-active a {background-color:var(--background-bg_white);color:var(--typography-black);font-weight:700;}
+.tab-content .tab-button li.tab-active + li button:after,
+.tab-content .tab-button li.tab-active + li a:after {display:none;}
+
+.tab-content .tab-button li.tab-active button:after,
+.tab-content .tab-button li.tab-active a:after {display:none;}
+.tab-content .tab-button li:first-child button:after,
+.tab-content .tab-button li:first-child a:after {display:none;}
+ 
 
 /* overflow-list */
 .overflow-list {display:flex!important;flex-wrap:nowrap!important;overflow-x:auto;scroll-snap-type:x mandatory;gap:6px;}
@@ -478,16 +498,8 @@ select[disabled] {background-color:var(--graye6);color:var(--graya7);}
 .icon-12 {flex:0 0 12px;width:12px;height:12px;}
 
 .icon-info {
-    -webkit-mask-image:url(../images/icon_only/icon_info.svg);
-    mask-image:url(../images/icon_only/icon_info.svg);
-}
-.icon-info.icon-12 {
-    -webkit-mask-image:url(../images/icon_only/icon_info_12.svg);
-    mask-image:url(../images/icon_only/icon_info_12.svg);
-}
-.icon-info.icon-48 {
-    -webkit-mask-image:url(../images/icon_only/icon_info_48.svg);
-    mask-image:url(../images/icon_only/icon_info_48.svg);
+    -webkit-mask-image:url(../images/toastr/ico_info.svg);
+    mask-image:url(../images/toastr/ico_info.svg);
 }
 .icon-caution {
     -webkit-mask-image:url(../images/icon_only/icon_caution.svg);
