--- a/html/components/component_tab.html
+++ b/html/components/component_tab.html
@@ -184,7 +184,7 @@
 			<h3>Type Button</h3>
 			<!-- tab-content -->
 			<div class="tab-content">
-				<ul class="tab-list tab-button overflow-list" role="tablist">
+				<ul class="tab-list tab-button" role="tablist">
 					<li class="tab tab-active"><button type="button" data-controls="tab-subpanel04" role="tab">tab-sub01</button></li>
 					<li class="tab"><button type="button" data-controls="tab-subpanel05" role="tab">tab-sub02</button></li>
 					<li class="tab"><button type="button" data-controls="tab-subpanel06" role="tab">tab-sub03</button></li>
@@ -208,22 +208,9 @@
 			<h3>Type Anchor</h3>
 			<!-- tab-content -->
 			<div class="tab-content">
-				<ul class="tab-list tab-button overflow-list" role="tablist">
+				<ul class="tab-list tab-button" role="tablist">
 					<li class="tab tab-active"><a role="tab" href="#">tab-sub01</a></li>
 					<li class="tab"><a role="tab" href="#">tab-sub02</a></li>
-					<li class="tab"><a role="tab" href="#">tab-sub03</a></li>
-				</ul>
-			</div>
-			<!-- //tab-content -->
-
-			<hr>
-			<h3>Type scrollable</h3>
-			<!-- tab-content -->
-			<div class="tab-content">
-				<ul class="tab-list tab-button overflow-list" role="tablist">
-					<li class="tab tab-active"><a role="tab" href="#">tab-sub01</a></li>
-					<li class="tab"><a role="tab" href="#">tab-sub02</a></li>
-					<li class="tab"><a role="tab" href="#">tab-sub03</a></li>
 					<li class="tab"><a role="tab" href="#">tab-sub03</a></li>
 				</ul>
 			</div>
