--- a/resources/css/ui-style.css
+++ b/resources/css/ui-style.css
@@ -1,5 +1,244 @@
 @charset "utf-8";
 
+:root{
+    --black-0:#0C0C0D;
+    --black-100:#0C0C0D;
+    --black-12:#0C0C0D1F;
+    --black-16:#0C0C0D29;
+    --black-20:#0C0C0D33;
+    --black-24:#0C0C0D3D;
+    --black-32:#0C0C0D52;
+    --black-4:#0C0C0D0A;
+    --black-40:#0C0C0D66;
+    --black-56:#0C0C0D8F;
+    --black-60:#0C0C0D99;
+    --black-72:#0C0C0DB8;
+    --black-8:#0C0C0D14;
+    --black-80:#0C0C0DCC;
+    --black-88:#0C0C0DE0;
+    --black-96:#0C0C0DF5;
+    --blue-100:#D1EAFF;
+    --blue-200:#90C9FD;
+    --blue-300:#5BABFB;
+    --blue-400:#3996F9;
+    --blue-50:#EAF4FF;
+    --blue-500:#2589F4;
+    --blue-600:#0871F3;
+    --blue-700:#1563C1;
+    --blue-800:#1759B0;
+    --blue-900:#174A92;
+    --cyan-100:#CBEEF6;
+    --cyan-200:#91D2E1;
+    --cyan-300:#64BFD4;
+    --cyan-400:#46B6CF;
+    --cyan-50:#E0F6FB;
+    --cyan-500:#1AA3C1;
+    --cyan-600:#1B91AC;
+    --cyan-700:#1B849B;
+    --cyan-800:#187388;
+    --cyan-900:#146274;
+    --deepblue-100:#CFDEFC;
+    --deepblue-200:#A7BFFB;
+    --deepblue-300:#7A9EFA;
+    --deepblue-400:#5682FB;
+    --deepblue-50:#E5EFFF;
+    --deepblue-500:#3F72FD;
+    --deepblue-600:#2658ED;
+    --deepblue-700:#1641D0;
+    --deepblue-800:#1938A9;
+    --deepblue-900:#162C8D;
+    --gray-200:#F1F3F5;
+    --gray-300:#E9ECEF;
+    --gray-400:#CFD4D9;
+    --gray-50:#F8F9FA;
+    --gray-500:#A4A9AE;
+    --gray-600:#777E85;
+    --gray-700:#495057;
+    --gray-800:#343A40;
+    --gray-900:#212528;
+    --green-100:#BAECDD;
+    --green-200:#76E0C0;
+    --green-300:#47D1A8;
+    --green-400:#20C594;
+    --green-50:#DFF7DF;
+    --green-500:#00AD7C;
+    --green-600:#02976D;
+    --green-700:#048B65;
+    --green-800:#047B5B;
+    --green-900:#066B51;
+    --pink-100:#FFD6E6;
+    --pink-200:#FDA5C8;
+    --pink-300:#F882B3;
+    --pink-400:#F35E9C;
+    --pink-50:#FFEBF2;
+    --pink-500:#F0448E;
+    --pink-600:#E52A71;
+    --pink-700:#CD1D67;
+    --pink-800:#A22F66;
+    --pink-900:#8C2B5A;
+    --purple-100:#F7DDFD;
+    --purple-200:#E5A1F7;
+    --purple-300:#D378F2;
+    --purple-400:#C45FEC;
+    --purple-50:#F9EDFC;
+    --purple-500:#B348E5;
+    --purple-600:#A13ED0;
+    --purple-700:#8A31B4;
+    --purple-800:#772D99;
+    --purple-900:#662B82;
+    --red-100:#FDD8D9;
+    --red-200:#F9A9AA;
+    --red-300:#F68486;
+    --red-400:#F06065;
+    --red-50:#FCEEEE;
+    --red-500:#EE444A;
+    --red-600:#E32B31;
+    --red-700:#CC1E24;
+    --red-800:#B01C23;
+    --red-900:#99141D;
+    --violet-100:#D4CFF7;
+    --violet-200:#8C81EB;
+    --violet-300:#8C81EB;
+    --violet-400:#7163EE;
+    --violet-50:#EBE9FB;
+    --violet-500:#6050F2;
+    --violet-600:#4E46DA;
+    --violet-700:#3A34D0;
+    --violet-800:#2A2AB7;
+    --violet-900:#1A259E;
+    --white-0:#FFFFFF;
+    --white-100:#FFFFFF;
+    --white-12:#FFFFFF1F;
+    --white-16:#FFFFFF29;
+    --white-20:#FFFFFF33;
+    --white-24:#FFFFFF3D;
+    --white-32:#FFFFFF52;
+    --white-4:#FFFFFF0A;
+    --white-40:#FFFFFF66;
+    --white-56:#FFFFFF8F;
+    --white-60:#FFFFFF99;
+    --white-72:#FFFFFFB8;
+    --white-8:#FFFFFF14;
+    --white-80:#FFFFFFCC;
+    --white-88:#FFFFFFE0;
+    --white-96:#FFFFFFF5;
+    --yellow-100:#FFEFB2;
+    --yellow-200:#FFE68A;
+    --yellow-300:#FFDB66;
+    --yellow-400:#FFD138;
+    --yellow-50:#FFF4D1;
+    --yellow-500:#FEBB10;
+    --yellow-600:#F9AA01;
+    --yellow-700:#F79A02;
+    --yellow-800:#E78404;
+    --yellow-900:#A95A00;
+    --background-bg_blue:#5BABFB;
+    --background-bg_cyan:#64BFD4;
+    --background-bg_deepBlue:#0871F3;
+    --background-bg_deepGray:#E9ECEF;
+    --background-bg_disabled:#0C0C0D0A;
+    --background-bg_gray:#F1F3F5;
+    --background-bg_lightGray:#F8F9FA;
+    --background-bg_lightBlue:#EAF4FF;
+    --background-bg_lightCyan:#E0F6FB;
+    --background-bg_lightPink:#FFEBF2;
+    --background-bg_lightPurple:#F9EDFC;
+    --background-bg_lightRed:#FCEEEE;
+    --background-bg_lightViolet:#EBE9FB;
+    --background-bg_lightYellow:#FFF4D1;
+    --background-bg_pink:#F882B3;
+    --background-bg_purple:#D378F2;
+    --background-bg_red:#F68486;
+    --background-bg_violet:#8C81EB;
+    --background-bg_white:#FFFFFF;
+    --background-bg_yellow:#FFD138;
+    --basic-black:#0C0C0DE0;
+    --basic-white:#FFFFFF;
+    --border-0:#0C0C0D00;
+    --border-12:#0C0C0D1F;
+    --border-4:#0C0C0D0A;
+    --border-72:#0C0C0DB8;
+    --border-8:#0C0C0D14;
+    --border-primary_enabled:#2589F4;
+    --brandPrimary-blue400:#3996F9;
+    --brandPrimary-blue500:#2589F4;
+    --brandPrimary-blue600:#0871F3;
+    --button-ghost-border:#0C0C0D1F;
+    --button-ghost-disabled:#FFFFFF;
+    --button-ghost-enabled:#FFFFFF00;
+    --button-ghost-onDisabled:#C5CBD1;
+    --button-ghost-onEnabled:#495057;
+    --button-ghost-pressed:#FFFFFF29;
+    --button-ghostw-border:#FFFFFFB8;
+    --button-ghostw-border_disabled:#FFFFFF29;
+    --button-ghostw-disabled:#FFFFFF00;
+    --button-ghostw-enabled:#FFFFFF00;
+    --button-ghostw-onDisabled:#FFFFFF3D;
+    --button-ghostw-onEnabled:#FFFFFFF5;
+    --button-ghostw-pressed:##FFFFFF29;
+    --button-outlined-border:#0C0C0D1F;
+    --button-outlined-disabled:#7786973D;
+    --button-outlined-enabled:#FFFFFF;
+    --button-outlined-onDisabled:#FFFFFF;
+    --button-outlined-onEnabled:#495057;
+    --button-outlined-pressed:#7484950D;
+    --button-primary-disabled:#7786973D;
+    --button-primary-enabled:#2589F4;
+    --button-primary-onDisabled:#FFFFFF;
+    --button-primary-onEnabled:#FFFFFF;
+    --button-primary-pressed:#1D61AA;
+    --button-secondary-border:#3996F9;
+    --button-secondary-disabled:#7786973D;
+    --button-secondary-enabled:#FFFFFF;
+    --button-secondary-onDisabled:#FFFFFF;
+    --button-secondary-onEnabled:#2589F4;
+    --button-secondary-pressed:#7484950D ;
+    --button-textBtn-Enabled:#777E85;
+    --icon-default:#0C0C0DE0;
+    --icon-disabled:#0C0C0D14;
+    --icon-gray_1:#CFD4D9;
+    --icon-gray_2:#A4A9AE;
+    --icon-white:#FFFFFF;
+    --shadow-blue_1:#EAF4FF;
+    --shadow-blue_2:#D1EAFF;
+    --shadow-blue_3:#90C9FD;
+    --shadow-gray_1:#0C0C0D0A;
+    --shadow-gray_2:#0C0C0D14;
+    --shadow-gray_3:#0C0C0D1F;
+    --status-active:#3996F9;
+    --status-caution:#FEBB10;
+    --status-dimmed:#0C0C0DB8;
+    --status-error:#EE444A;
+    --status-help:#B348E5;
+    --status-info:#1AA3C1;
+    --status-success:#00AD7C;
+    --status-focused:#2658ED;
+    --status-disabled_bg:#0C0C0D0A;
+    --status-disabled_font:#0C0C0D1F;
+    --surface-surface:#FFFFFF;
+    --surface-surface0:#FFFFFF;
+    --surface-surface100:#8295A71C;
+    --surface-surface200:#8597A82E;
+    --surface-surface300:#7786973D;
+    --surface-surface400:#6F7D8C66;
+    --surface-surface50:#7484950D;
+    --surface-surface500:#323F4F80;
+    --surface-surface700:#0C172399;
+    --surface-surface800:#070F16D1;
+    --surface-surface900:#0B0F13E8;
+    --typography-black:#0C0C0DE0;
+    --typography-body:#495057;
+    --typography-caption:#989FA7;
+    --typography-disabled:#989FA7;
+    --typography-gray:#495057;
+    --typography-placeholder:#0C0C0D3D;
+    --typography-title:#212528;
+    --typography-white:#FFFFFF;
+    --header-zIndex:100;
+    --sticky-zIndex:50;
+    --tab-zIndex:10;
+}
+
 /* typography */
 .headline-large {display:block;font-size:26px;line-height:1.4;font-weight:700;color:var(--typography-title);}
 .headline-medium {display:block;font-size:24px;line-height:1.4;font-weight:700;color:var(--typography-title);}
@@ -553,6 +792,12 @@ select[disabled] {background-color:var(--graye6);color:var(--graya7);}
 .clip {display:inline-flex;align-items:center;font-size:15px;font-weight:700;color:var(--white-100);line-height:26px;padding:0 8px;gap:4px;vertical-align:top;}
 .clip-recommend {border-radius: 0px 0px 8px 8px;background: linear-gradient(180deg, #F1BE17 0%, #FABB3B 100%);box-shadow: 0px 1px 0px 0px var(--shadow-gray_3, rgba(12, 12, 13, 0.12)), 0px 2px 4px -1px var(--shadow-gray_3);}
 .clip-recommend:before {content:'';flex:0 0 12px;width:12px;height:12px;background:url(../images/clip/clip-recommend.svg) center center / contain no-repeat;}
+
+/* dot-list */
+.dot-list {font-size:15px;font-weight:400;color:var(--typography-caption);padding:16px 4px;}
+.dot-list li {position:relative;padding-left:24px;}
+.dot-list li:before {content:'\00B7';font-size:inherit;color:inherit;font-weight:inherit;position:absolute;left:10px;top:0px;}
+
 
 /* dropDown */
 .dropDown {position:relative;z-index:var(--dropdown-zIndex);}
