--- a/html/components/component_input_text.html
+++ b/html/components/component_input_text.html
@@ -47,6 +47,9 @@
 	<!-- apexcharts -->
 	<link rel="stylesheet" type="text/css" href="../../resources/plugins/apexcharts/3.50.0/apexcharts.css">
 	<script src="../../resources/plugins/apexcharts/3.50.0/apexcharts.min.js"></script>
+	<!-- AOS -->
+	<link rel="stylesheet" type="text/css" href="../../resources/plugins/aos/3.0.0-beta.6/aos.css" />
+	<script src="../../resources/plugins/aos/3.0.0-beta.6/aos.js"></script>
 	<!-- //[plugins] -->
 
 	<link rel="stylesheet" href="../../resources/css/ui-fonts.css">
@@ -122,9 +125,9 @@
 							</div>
 							<div class="textarea-length">
 								<div class="left">0/300자</div>
-                                <div class="right">
-                                    <button type="button" class="btn-xsmall btn-primary btn-round">저장</button>
-                                </div>
+								<div class="right">
+									<button type="button" class="btn-xsmall btn-primary btn-round">저장</button>
+								</div>
 							</div>
 						</div>
 					</dd>
