--- a/html/components/component_toast.html
+++ b/html/components/component_toast.html
@@ -47,6 +47,9 @@
 	<!-- apexcharts -->
 	<link rel="stylesheet" type="text/css" href="../../resources/plugins/apexcharts/3.50.0/apexcharts.css">
 	<script src="../../resources/plugins/apexcharts/3.50.0/apexcharts.min.js"></script>
+	<!-- AOS -->
+	<link rel="stylesheet" type="text/css" href="../../resources/plugins/aos/3.0.0-beta.6/aos.css" />
+	<script src="../../resources/plugins/aos/3.0.0-beta.6/aos.js"></script>
 	<!-- //[plugins] -->
 
 	<!-- ui source -->
@@ -86,7 +89,7 @@
 			toastr.alert(`<div class="btn-toast-wrap"><button type="button" class="btn-xsmall btn-ghost-white">Small 버튼명</button>`, 'You clicked alert toast', {
 				"timeOut": 0,
 				"extendedTimeOut": 0,
-				"preventDuplicates": true,
+				"preventDuplicates": false,
 				"disableTimeOut": true,
 			});
 		});
