--- a/resources/css/ui-plugins.css
+++ b/resources/css/ui-plugins.css
@@ -285,6 +285,12 @@ div:where(.swal2-container) button:where(.swal2-close):hover {}
 
 .modal__overlay {display:block;background-color:var(--status-dimmed);}
 
+.micromodal-slide-select .modal__overlay {background-color:transparent;}
+.micromodal-slide-select .modal__header {display:none;}
+.micromodal-slide-select .modal__container {max-height:none;position:absolute;}
+.micromodal-slide-select .modal__container {border-radius:6px;box-shadow: 0px 2px 30px -4px rgba(0, 0, 0, 0.15);}
+
+
 
 .micromodal-slide .modal__container, .micromodal-slide .modal__overlay {will-change:initial;}
 .micromodal-slide-bottom .modal__overlay {display:flex;align-items:flex-end;}
@@ -325,7 +331,7 @@ div:where(.swal2-container) button:where(.swal2-close):hover {}
 
 
 /* toastr */
-#toast-container.toast-bottom-center>div, #toast-container.toast-top-center>div {width:auto;margin:0 16px;}
+#toast-container.toast-bottom-center>div, #toast-container.toast-top-center>div {width:auto;margin:8px 16px;}
 #toast-container>div {border-radius:8px;padding:16px;box-shadow:none;-webkit-box-shadow:none;opacity:1;background-color:var(--surface-surface800);}
 .toast-title,
 .toast-message {font-size:18px;color:var(--white-100);font-weight:400;padding:0 4px;}
