--- a/html/components/component_input_text.html
+++ b/html/components/component_input_text.html
@@ -18,14 +18,12 @@
 	<script src="../../resources/plugins/quill/2.0.2/quill.js"></script>
 	<script src="../../resources/plugins/quill/quill-resize-module/quill-resize-module.min.js"></script>
 	<!-- jstree -->
-
 	<link rel="stylesheet" href="../../resources/plugins/jstree/3.3.16/themes/default/style.min.css">
 	<script src="../../resources/plugins/jstree/3.3.16/jstree.min.js"></script>
 	<!-- micromodal -->
 	<link rel="stylesheet" href="../../resources/plugins/micromodal/0.4.10/micromodal.css">
 	<script src="../../resources/plugins/micromodal/0.4.10/micromodal.min.js"></script>
 	<!-- sortable -->
-
 	<script src="../../resources/plugins/sortable/1.15.2/Sortable.min.js"></script>
 	<!-- sweetalert2 -->
 	<link rel="stylesheet" href="../../resources/plugins/sweetalert2/11.11.0/sweetalert2.min.css">
@@ -81,7 +79,7 @@
 					<dd>
 						<div class="form">
 							<div class="input-wrap">
-								<input type="text" placeholder="Placeholder" title="input">
+								<input type="text" placeholder="Placeholder" aria-label="input">
 							</div>
 						</div>
 					</dd>
@@ -91,7 +89,7 @@
 					<dd>
 						<div class="form">
 							<div class="input-wrap">
-								<input type="text" placeholder="Placeholder" value="Text" title="input">
+								<input type="text" placeholder="Placeholder" value="Text" aria-label="input">
 							</div>
 						</div>
 					</dd>
@@ -101,7 +99,7 @@
 					<dd>
 						<div class="form">
 							<div class="input-wrap">
-								<input type="text" readonly placeholder="Placeholder" value="Readonly" title="input">
+								<input type="text" readonly placeholder="Placeholder" value="Readonly" aria-label="input">
 							</div>
 						</div>
 					</dd>
@@ -111,7 +109,7 @@
 					<dd>
 						<div class="form">
 							<div class="input-wrap">
-								<input type="text" disabled placeholder="Placeholder" value="Disabled" title="input">
+								<input type="text" disabled placeholder="Placeholder" value="Disabled" aria-label="input">
 							</div>
 						</div>
 					</dd>
@@ -121,7 +119,7 @@
 					<dd>
 						<div class="form">
 							<div class="input-wrap">
-								<textarea title="메모"></textarea>
+								<textarea aria-label="메모"></textarea>
 							</div>
 							<div class="textarea-length">
 								<div class="left">0/300자</div>
