--- a/html/components/component_input_text.html
+++ b/html/components/component_input_text.html
@@ -170,16 +170,30 @@
 					</dd>
 				</dl>
 				<dl>
-					<dt>password</dt>
-					<dd>
-						<div class="form">
-							<div class="input-wrap input-btn">
-								<input type="password" placeholder="Placeholder" value="Text">
-								<button type="button" class="input-password" aria-label="비밀번호 표시"></button>
+					<dl>
+						<dt>Type Tel <span>With Button</span></dt>
+						<dd>
+							<div class="form">
+								<div class="input-wrap input-btn">
+									<input type="tel" placeholder="Placeholder" value="Text">
+									<button type="button" class="input-remove-small" aria-label="입력 내용 삭제"></button>
+									<button type="button" class="input-search" aria-label="입력 내용 검색"></button>
+								</div>
 							</div>
-						</div>
-					</dd>
-				</dl>
+						</dd>
+					</dl>
+					<dl>
+						<dt>password</dt>
+						<dd>
+							<div class="form">
+								<div class="input-wrap input-btn">
+									<input type="password" placeholder="Placeholder" value="Text">
+									<button type="button" class="input-remove-small" aria-label="입력 내용 삭제"></button>
+									<button type="button" class="input-password" aria-label="비밀번호 표시"></button>
+								</div>
+							</div>
+						</dd>
+					</dl>
 			</div>
 		</div>
 
